# I2V-OSS-videoGen-pipeline

./: .gitattributes  .gitignore  README.md  WAN_NextRun_Patch_Report.md  pyproject.toml  requirements.txt
docs/: Last-Run-Report.txt  vast-runs-playbook.txt  vast_runbook.md  wan_quality_tuning.md
jobs/: example_cogvideox.yaml  example_mock.yaml  example_wan.yaml  idea01_wan.yaml  idea02_hunyuan.yaml  idea03_cogvideox.yaml
jobs/examples/: example_hunyuan.yaml
models/: __init__.py  base.py  cogvideox15_i2v.py  hunyuan_i2v.py  mock.py  registry.py  wan22.py
pipeline/: __init__.py  artifacts.py  bundling.py  clip_validation.py  config.py  env_probe.py  ffmpeg_utils.py  frames.py  job_schema.py  output_schema.py  postprocess.py  progress.py  prompting.py  runner.py  stitching.py  timeouts.py  utils.py
scripts/: _job_loading.py  build_job.py  bundle.py  cleanup_run.sh  control_run.py  debug_cog_frame_stats.py  download_bundle.ps1  ffmpeg_check.py  path_check.py  prefetch.py  remote_run.sh  run_all.py  run_job.py  run_wan.py  self_check.py  setup_local.ps1  setup_vast.sh  smoke_adapter_cogvx15.py  smoke_adapter_hunyuan.py  smoke_adapter_wan22.py  test_bundle_ready.py  test_cog_sanitize.py  test_motion_block_defaults.py  test_motion_block_included.py  test_prompt_constraints_included.py  test_run_all_schema_parity.py  test_wan_adaptive_retry_wiring.py  test_wan_job_overrides.py  test_wan_patch_basics.py  test_wan_per_shot_overrides.py  test_watch_pretty.py  validate_run.py  vast_bootstrap.sh  verify_jobpacks.py  watch_and_download.ps1  watch_status.py
(+8 files in other folders)
